[package]
name = "escherich"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
  "bevy_asset",           # Assets management
  "bevy_scene",           # Scenes management
  "bevy_audio",           # Builtin audio
  "bevy_winit",           # Window management
  "animation",            # Animation support
  "bevy_render",          # Rendering framework core
  "bevy_core_pipeline",   # Common rendering abstractions
  "bevy_sprite",          # 2D (sprites) rendering
  "bevy_text",            # Text/font rendering
  "bevy_ui",              # UI toolkit
  "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
